// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CanvasForm should render 1`] = `
<div>
  <h1
    class="pf-v5-c-title pf-m-2xl"
    data-ouia-component-id="OUIA-Generated-Title-1"
    data-ouia-component-type="PF5/Title"
    data-ouia-safe="true"
  >
    My Node
  </h1>
  <div
    class="canvas-form"
  >
    <form
      class="pf-v5-c-form"
      data-testid="autoform"
      novalidate=""
    >
      <div>
        <div
          class="pf-v5-c-form__group"
          data-fieldname="name"
          data-testid="wrapper-field"
        >
          <div
            class="pf-v5-c-form__group-label"
          >
            <label
              class="pf-v5-c-form__label"
              for="uniforms-0000-0005"
            >
              <span
                class="pf-v5-c-form__label-text"
              >
                Name
              </span>
            </label>
             
          </div>
          <div
            class="pf-v5-c-form__group-control"
          >
            <span
              class="pf-v5-c-form-control"
            >
              <input
                aria-invalid="false"
                aria-label="uniforms text field"
                data-ouia-component-id="OUIA-Generated-TextInputBase-2"
                data-ouia-component-type="PF5/TextInput"
                data-ouia-safe="true"
                data-testid="text-field"
                id="uniforms-0000-0005"
                label="Name"
                name="name"
                type="text"
                value="my node"
              />
            </span>
            <div
              class="pf-v5-c-form__helper-text"
            >
              <div
                class="pf-v5-c-helper-text"
              >
                <div
                  class="pf-v5-c-helper-text__item"
                >
                  <span
                    class="pf-v5-c-helper-text__item-text"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`CanvasForm should render nothing if no schema and no definition is available 1`] = `
<div>
  <h1
    class="pf-v5-c-title pf-m-2xl"
    data-ouia-component-id="OUIA-Generated-Title-3"
    data-ouia-component-type="PF5/Title"
    data-ouia-safe="true"
  >
    My Node
  </h1>
  <div
    class="canvas-form"
  >
    <div
      class="pf-v5-c-code-block"
    >
      <div
        class="pf-v5-c-code-block__content"
      >
        <pre
          class="pf-v5-c-code-block__pre"
        >
          <code
            class="pf-v5-c-code-block__code"
          >
            null

          </code>
        </pre>
      </div>
    </div>
  </div>
</div>
`;

exports[`CanvasForm should render nothing if no schema is available 1`] = `
<div>
  <h1
    class="pf-v5-c-title pf-m-2xl"
    data-ouia-component-id="OUIA-Generated-Title-2"
    data-ouia-component-type="PF5/Title"
    data-ouia-safe="true"
  />
  <div
    class="canvas-form"
  >
    <div
      class="pf-v5-c-code-block"
    >
      <div
        class="pf-v5-c-code-block__content"
      >
        <pre
          class="pf-v5-c-code-block__pre"
        >
          <code
            class="pf-v5-c-code-block__code"
          />
        </pre>
      </div>
    </div>
  </div>
</div>
`;
